svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
spec:
  type: ClusterIP
  selector:
    app: wil-playground
  ports:
    - port: 8888
      targetPort: 8888
