ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil-playground-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wil-playground
            port:
              number: 8888
